--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "qs": "^6.12.1",
     "sass": "^1.77.4",
     "uuid": "^9.0.1",
